# Push_swap_42

./: CMakeLists.txt  Makefile  ahavrius  diff.txt  fuck1.txt  operations.h  push_swap.h  test.txt
checker/: Makefile  Push_swap  init.c  main.c  operations_controller.c  sort_check.c  stack_controller.c
includes/: errors.h  op.h  operations.h  push_swap.h
libft/: Makefile  ft_atoi.c  ft_isint.c  libft.h
operations/: op.h  op_push.c  op_reverse_rotate.c  op_rotate.c  op_swap.c  op_utils.c
push_swap/: Makefile  algorhythm.c  algorithm.c  algorithm_start.c  algorithm_start_utils.c  algorithm_utils.c  b_stack.c  conditions.c  init.c  main.c  output_instruction_optimization.c  output_instructions_utils.c  preparation.c  print.c  print_op.c  sort_utils.c  utils.c  validation.c
src/checker/: Makefile  init.c  main.c  operations_controller.c  sort_check.c  stack_controller.c
src/operations/: op_push.c  op_reverse_rotate.c  op_rotate.c  op_swap.c  op_utils.c
src/push_swap/: Makefile  algorithm_main.c  algorithm_start.c  algorithm_start_utils.c  algorithm_utils.c  conditions.c  init.c  main.c  output_instruction_optimization.c  output_instructions_utils.c  print.c  sort_utils.c  utils.c  validation.c
